const String titleApp = "RegEase";
const String descApp = "RegEase, solusi terbaik\nuntuk mengatasi rasa bosan\nsaat mengantri.";
const String titleRegister = "Register Akun";
const String titleLogin = "Login";
const String titleError = "Error";
const String titleHome = "Home";
const String titleNoAntrian = "Nomor Antrian Anda";
const String titleLogout = "Log out";
const String titleProfile = "Profile";
const String contentLogout = "Keluar dari Aplikasi?";

const String textWelcome = "Selamat Datang,";
const String textNext = "Next";
const String textLogin = "Sudah Mempunyai Akun?";
const String textDaftarRegister = "Belum Mempunyai Akun?";
const String textEmail = "Email";
const String textYa = "Ya";
const String textTidak = "Tidak";
const String textDeskripsiProfile = "Silahkan Lengkapi Data\nDiri Anda";
const String textNama = "Nama";
const String textNomorHP = "Nomor Handphone";
const String textAlamat = "Alamat";
const String textTglLahir = "Tanggal Lahir";
const String textButtonSave = "Save";
const String textPoli = "Poli List";
const String textAddPoli = "Add Poli";
const String titleSuccess = "Berhasil";
const String titlePoli = "Poli";
const String titleDaftarAntrian = "Daftar Antrian"; 
const String titleRiwayatPasienMasuk = "Riwayat Pasien Masuk";
const String textAmbilAntrian = "Ambil Antrian";
const String textButtonDaftar = "Daftar";
const String textInformasiDaftarAntrian = "kami akan mengirimkan pesan saat antrian anda telah mendekati waktu yang telah di tentukan. Mohon di tunggu kak.";
const String titleJadwalPemeriksaan = "Jadwal Pemeriksaan";
const String titleRiwayatPemeriksaan = "Riwayat Pemeriksaan";
const String textButtonLihatAntrian = "Lihat Antrian";
const String textButtonAntrian = "Silahkan Mengambil\nNomor Antrian Anda";
const String titleAntrian = "Antrian";
const String textSedangDilayani = "Sedang Dilayani";
const String textNoAntrian = "Antrian Anda";
const String textSisaAntrian = "Sisa Antrian";
const String textJumlahPendaftar = "Jumlah Pendaftar";
const String textInformasiAntrian = "Mohon membawa kartu identitas, beserta kartu kontrol anda.";