...
        selectedDate = picked;
        tanggalantrian.text = DateFormat.yMd().format(selectedDate);
      });
  }

  Future<Null> _selectTime(BuildContext context) async {
    const Key('time-picker-dial');
    final TimeOfDay? picked = await showTimePicker(
      context: context,
      initialTime: selectedTime,
    );
    if (picked != null)
      // ignore: curly_braces_in_flow_control_structures
...
                context,
                MaterialPageRoute(
                  builder: (context) => const HomePagePasien(),
                ),
              ),
              child: const Text(
                'OK',
                style: TextStyle(color: colorPinkText),
              ),
            ),
          ],
        );
      },
...
                          ? DropdownButtonFormField(
                              decoration: InputDecoration(
                                border: OutlineInputBorder(
                                  borderRadius: BorderRadius.circular(8),
                                ),
                              ),
                              hint: const Text("Pilih Poli"),
                              value: namaPoli,
                              onChanged: (newValue) {
                                setState(() {
                                  namaPoli = newValue.toString();
                                });
                              },
...
