...
    Size size = MediaQuery.of(context).size;
    return Scaffold(
      appBar: AppBar(
        title: const Text(titleHome),
        actions: [
          IconButton(
            key: const Key('logout'),
            onPressed: showDialogExitToApp,
            icon: const Icon(
              Icons.exit_to_app,
              color: Colors.white,
            ),
          ),
...
            ),
            title: const Text(
              titleHome,
            ),
          ),
          ListTile(
            key: const Key('profile'),
            onTap: () => Navigator.pushReplacement(
              context,
              MaterialPageRoute(
                builder: (_) => ProfilePasien(
                  uid: uId.toString(),
                  nama: nama.toString(),
...
